[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfq0seo"
version = "1.0.0"
authors = [
    { name = "tfq0"}
]
description = "Modern SEO analysis and optimization toolkit"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
keywords = ["seo", "analysis", "optimization", "web", "content", "meta tags", "technical seo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking",
    "Topic :: Text Processing :: Markup :: HTML",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "nltk>=3.8.1",
    "readability>=0.3.1",
    "certifi>=2024.2.2",
    "textblob>=0.17.1",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.1",
    "validators>=0.22.0",
    "html5lib>=1.1",
    "lxml>=4.9.3"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.9.0",
    "coverage>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0"
]

[project.urls]
Homepage = "https://github.com/tfq66/tfq0seo"
Repository = "https://github.com/tfq66/tfq0seo.git"
Documentation = "https://github.com/tfq66/tfq0seo/wiki"
"Bug Tracker" = "https://github.com/tfq66/tfq0seo/issues"
"Source Code" = "https://github.com/tfq66/tfq0seo"

[project.scripts]
tfq0seo = "src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py37"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 